# cjm-dev

./: .gitignore  README.md  file_struct.txt  pyproject.toml
.github/workflows/: stock_analyzer-Automation.yml
devices/lenovo/: contacted.txt  emails_to_send.csv  lead_automation.py  leadgen.py  leads_output.csv  video_editor_engine.py
documentation/: README.md  setup.md
documentation/helper_scripts/: api_manager.md  logger.md  update_manager.md
documentation/lead-automation/: README.md  pipeline-a-add-leads.md  pipeline-b-update-leads.md  reference.md  setup.md
documentation/scripts/: blog_automation.md  clip_generator.md  email_manager.md  json_formatter.md  lead_automation.md  leadfilter.md  leadgen.md  lovable_automation.md  montage_builder.md  stock_analyzer.md  webhook_manager.md
documentation/testing/: unittests.md
documentation/video-editing/: README.md  clip-generator.md  montage-builder.md  reference.md  setup.md
helper_scripts/api_manager/: __init__.py  api_manager.py  apify_actors.json
requirements/: requirements.txt
scripts/chikara_realms/: blog_automation.py  blog_category.json  discipline_topics.json  fitness_topics.json  growth_topics.json  img_prompt.txt  mental-health_topics.json  nutrition_topics.json  passive-income_topics.json  personal-finance_topics.json  real-estate-investing_topics.json  stock-market-trading_topics.json  strength_topics.json  wealth-building_topics.json
scripts/email_manager/: email_manager.py
scripts/json_formatter/: json_formatter.py
shared/: api_manager.py  logger.py
(+166 files in other folders)
